--- a/Backend/config/dev.env
+++ b/Backend/config/dev.env
@@ -1,4 +1,4 @@
-DB_URI = "mongodb+srv://ahmedmohamedomar74:TvnD3NmF68fzQLAW@cluster0.5eigxsj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_URI = "mongodb+srv://ahmedmohamedomar74:TvnD3NmF68fzQLAW@cluster0.5eigxsj.mongodb.net/bookshare?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
 
 #HASHING 
@@ -16,6 +16,8 @@ ACESS_TOKEN_EXPIRE_IN = "0.5h"
 SYSTEM_REFRESH_TOKEN_SIGNATURE = "SDHKKFDMKLGMFSKSAD"
 USER_REFRESH_TOKEN_SIGNATURE = "NSADMFLMDFNFSDAKML"
 REFRESH_TOKEN_EXPIRE_IN = "1y"
+
+EMAIL_TOKEN_SIGNATURE = "mfoikldsngoidfngo"
 
 HASH_KEY = "321rfredgsf"
 
