--- a/Backend/config/dev.env
+++ b/Backend/config/dev.env
@@ -26,3 +26,9 @@ GOOGLE_CLIENT_ID = "1087607913237-affnjkv2cdqbeuigmumhddh3t73742tr.apps.googleus
 
 GOOGLE_PASSWORD = "uoki xnht dghn tqud"
 GOOGLE_EMAIL = "ahmedmohamedomar74@gmail.com"
+
+#CLOUDINARY
+
+CLOUDINARY_CLOUD_NAME = "divpctawz"
+CLOUDINARY_API_KEY = "536998791187383"
+CLOUDINARY_API_SECRET = "-e1WmH8kZmNbdZZ_FCTcYeGiaI0"
