--- a/Backend/config/dev.env
+++ b/Backend/config/dev.env
@@ -1,6 +1,8 @@
 DB_URI = "mongodb+srv://ahmedmohamedomar74:TvnD3NmF68fzQLAW@cluster0.5eigxsj.mongodb.net/bookshare?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
 
+BASE_URL = http://localhost:3000
+
 #HASHING 
 SALT = 10
 
