--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:dev": "node --watch ./src/index.js"
+    "start:dev": "node --watch ./src/index.js",
+    "test": "jasmine"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +24,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jasmine": "^5.12.0"
+  }
 }
