--- a/Backend/config/dev.env
+++ b/Backend/config/dev.env
@@ -34,3 +34,7 @@ GOOGLE_EMAIL = "ahmedmohamedomar74@gmail.com"
 CLOUDINARY_CLOUD_NAME = "divpctawz"
 CLOUDINARY_API_KEY = "536998791187383"
 CLOUDINARY_API_SECRET = "-e1WmH8kZmNbdZZ_FCTcYeGiaI0"
+
+HUGGINGFACE_API_KEY=
+MODERATION_MODE=strict
+MODERATION_FAIL_CLOSED=false
