--- a/frontend-user/package.json
+++ b/frontend-user/package.json
@@ -17,11 +17,13 @@
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
+    "lucide-react": "^0.553.0",
     "notistack": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
